# Minase

./: CMakeLists.txt  ImageUtil.hpp  LICENSE  NanoSyntaxHighlight.hpp  README.md  README_JP.md  TermboxUtil.hpp  help.hpp  icons.hpp  main.cpp
cpp-linenoise/: README.txt  linenoise.hpp
example-plugin/: 0extra_archive  0renamer  _1autojump%  _2archive  _archive  autojump  extra_archive  sxiv
inih/: README.txt
libbsd/: README.txt
termbox/: README.txt  termbox.c  termbox.h  wcwidth-cjk.hpp
tsl/: README.txt
