CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(Minase VERSION 0.1.0 LANGUAGES CXX C)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release" CACHE STRING
      "Choose the type of build, options are: Debug Release"
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)
MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(Iconv REQUIRED)
INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(UCHARDET REQUIRED uchardet)
IF(NOT UCHARDET_FOUND)
  MESSAGE(FATAL_ERROR "uchardet not found!")
ELSE()
  MESSAGE(STATUS "uchardet: ${UCHARDET_VERSION}")
ENDIF()

PKG_SEARCH_MODULE(TAGLIB REQUIRED taglib)
IF(NOT TAGLIB_FOUND)
  MESSAGE(FATAL_ERROR "taglib not found!")
ELSE()
  MESSAGE(STATUS "taglib: ${TAGLIB_VERSION}")
ENDIF()

SET(MIGEMO_LIBRARIES "")
IF(EXISTS "/usr/include/migemo.h")
  MESSAGE(STATUS "Use migemo")
  ADD_COMPILE_OPTIONS("-DUSE_MIGEMO")
  SET(MIGEMO_LIBRARIES "-lmigemo")
ENDIF()

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-fPIC -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -pg")
SET(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3 -mtune=native -march=native -mfpmath=both")

ADD_EXECUTABLE(minase main.cpp termbox/termbox.c termbox/utf8.c)
INCLUDE_DIRECTORIES(
  ${UCHARDET_INCLUDE_DIRS}
  ${ICONV_INCLUDE_DIRS}
  ${TAGLIB_INCLUDE_DIRS}
  ./
  )
TARGET_LINK_LIBRARIES(
  minase
  Threads::Threads
  ${UCHARDET_LIBRARIES}
  ${ICONV_LIBRARIES}
  ${TAGLIB_LIBRARIES}
  ${MIGEMO_LIBRARIES}
  )

INSTALL(TARGETS minase DESTINATION bin)
